--- a/config/application.yml
+++ b/config/application.yml
@@ -1,10 +1,20 @@
 # 监控配置
 spring:
-  # redis
   redis:
     host: localhost
     port: 6379
     password: admin
+  cloud:
+    consul:
+      discovery:
+        tags: version=v1
+        instance-id: ${spring.application.name}${random.int}
+        health-check-path: /actuator/health
+        health-check-interval: 10s
+        health-check-critical-timeout: 60s
+        prefer-ip-address: true
+      host: zhangcc_fs.com
+      port: 8500
 management:
   endpoints:
     web:
