--- a/config/gateway.yml
+++ b/config/gateway.yml
@@ -13,7 +13,7 @@ spring:
           enabled: true
       routes:
         - id: classify
-              uri: lb://classify
+          uri: lb://common-classify
         - id: client
           uri: lb://client
           predicates:
